# XunilOS

./: .gitmodules  GNUmakefile  README.md  build_doomgeneric.sh  build_helloworld.sh  build_libxunil.sh  limine.conf
assets/: .gitignore  helloworld.elf
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: graphics.rs  main.rs  userspace_stub.rs  util.rs
kernel/src/arch/: arch.rs  mod.rs  serial.rs
kernel/src/arch/x86_64/: elf.rs  gdt.rs  heap.rs  idt.rs  init.rs  interrupts.rs  mod.rs  mouse.rs  paging.rs  usermode.rs
kernel/src/driver/: framebuffer.rs  graphics.rs  keyboard.rs  mod.rs  mouse.rs  serial.rs  syscall.rs  timer.rs
kernel/src/driver/elf/: header.rs  loader.rs  mod.rs  program.rs  reloc.rs  section.rs  validation.rs
kernel/src/driver/graphics/: base.rs  font_render.rs  framebuffer.rs  mod.rs  primitives.rs
kernel/src/mm/: address_space.rs  mod.rs  usercopy.rs
kernel/src/task/: mod.rs  process.rs  scheduler.rs
kernel/src/utils/: graphics.rs  math.rs  mod.rs
libxunil/src/: lib.rs  syscall.rs
libxunil/tests/: compile.sh  helloworld.c
user/apps/helloworld/: compile.sh  helloworld.c
user/libxunil/: Cargo.toml  to_implement.txt
user/libxunil/include/: stdio.h
user/libxunil/src/: file.rs  heap.rs  lib.rs  mem.rs  syscall.rs
user/libxunil/src/include/: stdio.h  stdlib.h
